--- a/│─ schedule.html
+++ b/│─ schedule.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8">
+  <title>資管一A 課表</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav class="nav">
+    <a href="index.html" class="nav__link">自我介紹</a>
+    <a href="schedule.html" class="nav__link active">課表</a>
+    <a href="gallery.html" class="nav__link">我的日常</a>
+    <a href="contact.html" class="nav__link">聯絡我</a>
+  </nav>
+
+  <div class="container">
+    <h1>資管一A 課表</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>節次</th>
+          <th>星期一</th>
+          <th>星期二</th>
+          <th>星期三</th>
+          <th>星期四</th>
+          <th>星期五</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>第一節</td>
+          <td></td>
+          <td>微積分</td>
+          <td></td>
+          <td></td>
+          <td>英文（一）</td>
+        </tr>
+        <tr>
+          <td>第二節</td>
+          <td>探索永續</td>
+          <td></td>
+          <td>英文（一）</td>
+          <td></td>
+          <td>英文（一）</td>
+        </tr>
+        <tr>
+          <td>第三節</td>
+          <td>會計學</td>
+          <td>數位科技與AI應用</td>
+          <td>管理學</td>
+          <td>校園與社區服務學習</td>
+          <td>統計學</td>
+        </tr>
+        <tr>
+          <td>第四節</td>
+          <td>會計學</td>
+          <td>數位科技與AI應用</td>
+          <td>管理學</td>
+          <td>校園與社區服務學習</td>
+          <td>數位科技與AI應用</td>
+        </tr>
+        <tr>
+          <td>第五節</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>基礎程式設計</td>
+        </tr>
+        <tr>
+          <td>第六節</td>
+          <td>會計學</td>
+          <td></td>
+          <td></td>
+          <td>經濟學原理（二）</td>
+          <td>生死學</td>
+        </tr>
+        <tr>
+          <td>第七節</td>
+          <td>微積分</td>
+          <td></td>
+          <td></td>
+          <td>經濟學原理（二）</td>
+          <td>生死學</td>
+        </tr>
+        <tr>
+          <td>第八節</td>
+          <td>微積分</td>
+          <td>基礎程式設計</td>
+          <td>管理學</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>第九節</td>
+          <td>基礎程式設計</td>
+          <td>統計學</td>
+          <td>大學學習</td>
+          <td>大學學習</td>
+          <td>體育</td>
+        </tr>
+        <tr>
+          <td>第十節</td>
+          <td></td>
+          <td>統計學</td>
+          <td>大學學習</td>
+          <td>大學學習</td>
+          <td>體育</td>
+        </tr>
+        <tr>
+          <td>第十一節</td>
+          <td>初級華語聽說（一）</td>
+          <td>初級華語聽說（三）</td>
+          <td></td>
+          <td>初級華語聽說（一）</td>
+          <td>初級華語聽說（三）</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
+</html>
 
