--- a/│─ gallery.html
+++ b/│─ gallery.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <h1>平常做的事 📷</h1>
-    <p style="text-align:center;">這是我平常玩的遊戲、生活紀錄與興趣作品。</p>
+    <p style="text-align:center;">這個是我最喜歡的動物。</p>
     <div class="gallery">
       <img src="images/cute 1.jpg alt="照片1">
       <img src="images/cute 2.jpg" alt="照片2">
