--- a/│─ schedule.html
+++ b/│─ schedule.html
@@ -14,7 +14,7 @@
   </nav>
 
   <div class="container">
-    <h1>資管一A 課表</h1>
+       <h1>資管一A 課表</h1>
     <table>
       <thead>
         <tr>
@@ -37,8 +37,8 @@
         </tr>
         <tr>
           <td>第二節</td>
-          <td>探索永續</td>
           <td></td>
+          <td>探索永續</td>
           <td>英文（一）</td>
           <td></td>
           <td>英文（一）</td>
@@ -71,17 +71,17 @@
           <td>第六節</td>
           <td>會計學</td>
           <td></td>
+          <td>經濟學原理</td>
           <td></td>
-          <td>經濟學原理（二）</td>
-          <td>生死學</td>
+          <td></td>
         </tr>
         <tr>
           <td>第七節</td>
           <td>微積分</td>
           <td></td>
+          <td>經濟學原理</td>
           <td></td>
-          <td>經濟學原理（二）</td>
-          <td>生死學</td>
+          <td></td>
         </tr>
         <tr>
           <td>第八節</td>
@@ -93,17 +93,17 @@
         </tr>
         <tr>
           <td>第九節</td>
+          <td></td>
           <td>基礎程式設計</td>
           <td>統計學</td>
-          <td>大學學習</td>
           <td>大學學習</td>
           <td>體育</td>
         </tr>
         <tr>
           <td>第十節</td>
           <td></td>
+          <td></td>
           <td>統計學</td>
-          <td>大學學習</td>
           <td>大學學習</td>
           <td>體育</td>
         </tr>
@@ -115,9 +115,16 @@
           <td>初級華語聽說（一）</td>
           <td>初級華語聽說（三）</td>
         </tr>
+        <tr>
+          <td>第十二節</td>
+          <td>初級華語聽說（一）</td>
+          <td>初級華語聽說（三）</td>
+          <td></td>
+          <td>初級華語聽說（一）</td>
+          <td>初級華語聽說（三）</td>
+        </tr>
       </tbody>
     </table>
   </div>
 </body>
 </html>
-
