--- a/│─ gallery.html
+++ b/│─ gallery.html
@@ -14,7 +14,7 @@
   </nav>
 
   <div class="container">
-    <h1>平常做的事 📷</h1>
+    <h1> 小熊貓 📷</h1>
     <p style="text-align:center;">這個是我最喜歡的動物。</p>
     <div class="gallery">
       <img src="images/cute 1.jpg alt="照片1">
